<resources>
    <string name="app_name">LedgerEx</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="toolbar_app_name_1">L e d g e r</string>
    <string name="toolbar_app_name_2">" E X"</string>

    <string name="send">SEND</string>
    <string name="receive">RECEIVE</string>
    <string name="buysell">BUY/SELL</string>

    <string name="enter_pin">ENTER PIN</string>

    <string name="day">DAY</string>
    <string name="week">WEEK</string>

    <string name="trans_history">TRANSACTION HISTORY</string>


</resources>
