<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.darwinlabs.ledgerex.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/ledgerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/currencyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray">

        </LinearLayout>

        <TextView
            android:id="@+id/currencyAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currencyAmountDollars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/unitCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rateUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/day"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/arrowPercentGainDay"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_arrow_drop_down_red_24dp" />

            <TextView
                android:id="@+id/percentGainDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textColor="@color/red"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weekText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week"
                android:layout_marginRight="5dp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/arrowPercentGainWeek"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_arrow_drop_up_green_24dp" />

            <TextView
                android:id="@+id/percentGainWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textColor="@color/green"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ledgerView"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:id="@+id/sendAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="?selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/sendicon"/>

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:text="@string/send"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/receiveAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp"

            android:background="?selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/receiveicon"
                android:id="@+id/imageView" />

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:text="@string/receive"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buySellAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="?selectableItemBackground"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/transfericon"/>

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:text="@string/buysell"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
